up: server config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --files v1/src/app.ts",
+    "dev": "NODE_ENV=development nodemon --files v1/src/app.ts",
+    "prod": "NODE_ENV=production nodemon --files v1/src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
