--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.env.development
+.env.test
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
