--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/bytecoderss/b-log_backend#readme",
   "dependencies": {
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
@@ -38,7 +38,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.1",
     "dotenv": "^16.1.4",
-    "prisma": "4.16.2",
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
