--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bytecoderss/b-log_backend#readme",
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
@@ -28,6 +29,7 @@
     "http-status": "^1.6.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
