--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.12",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
@@ -30,6 +31,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
@@ -41,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.1",
+    "@types/passport-github2": "^1.2.5",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "dotenv": "^16.1.4",
