--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,9 @@
 {
-          "tabWidth": 2,
-          "printWidth": 80,
-          "semi": true,
-          "trailingComma": "es5",
-          "singleQuote": false,
-          "endOfLine": "lf",
-          "useTabs": false
+  "tabWidth": 2,
+  "printWidth": 80,
+  "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": true,
+  "endOfLine": "lf",
+  "useTabs": false
 }
